# templater

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  tests.yml
docs/: grammar.ebnf  table.ebnf  tpl.md
samples/: Ast.tbl  Simple.md.tpl  Simple.tbl  Tokens.hpp.tpl  Tokens.tbl  Types.tbl  test.tbl
src/: CMakeLists.txt  Utils.hpp  grammar.ebnf  main.cpp  pch.hpp
src/Support/: Containers.hpp  Context.cpp  Context.hpp  Diagnostics.cpp  Diagnostics.hpp  GlobalContext.cpp  GlobalContext.hpp  GridLayout.cpp  GridLayout.hpp  LexerBase.hpp  MemoryPool.hpp  Separator.hpp  Source.cpp  Source.hpp  SourceLoc.hpp  TokenBase.hpp  Utils.hpp  VisitorMixin.hpp
src/Table/: Ast.cpp  Ast.hpp  AstAllocator.hpp  Column.cpp  Column.hpp  Driver.cpp  Driver.hpp  Generator.cpp  Generator.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Printer.cpp  Printer.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp  Table.cpp  Table.hpp  Token.cpp  Token.hpp  Value.cpp  Value.hpp  Visitor.cpp  Visitor.hpp
src/Table/Ast/: Allocator.hpp  Ast.cpp  Ast.hpp  Context.cpp  Context.hpp  Printer.cpp  Printer.hpp
src/Table/Parse/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp
src/Tpl/: Lexer.cpp  Lexer.hpp  Templater.cpp  Templater.hpp  Token.cpp  Token.hpp
tests/: CMakeLists.txt  CompilerBase.hpp  GeneratorTests.cpp  LexerTests.cpp  ParserTests.cpp  SourceTests.cpp
tests/tables/fails/: unexpected_tokens2.tbl
tests/tables/fails/parser/: missing_token.tbl  unexpected_tokens.tbl  unexpected_tokens2.tbl  unexpected_tokens3.tbl  unexpected_tokens4.tbl  unexpected_tokens5.tbl
